2016-08-25  Jean-Louis Martineau <JMartineau@carbonite.com>
	* perl/Amanda/Process.pm: Typo

2016-08-25  Jean-Louis Martineau <JMartineau@carbonite.com>
	* installcheck/*.pl: Make sure they all log their results

2016-08-25  Jean-Louis Martineau <JMartineau@carbonite.com>
	* perl/Amanda/Vault.pm: fix

2016-08-25  Jean-Louis Martineau <JMartineau@carbonite.com>
	* perl/Amanda/Vault.pm: Log a 'STATS hostname' line
	* perl/Amanda/Report.pm: Parse the amvault 'STATS hostname' line
	* perl/Amanda/Report/json.pm: Always include the head section
	* installcheck/Amanda_Rest_Runs.pl: Add head section
	* installcheck/catalogs/bigestimate.cat,
	  installcheck/catalogs/doublefailure.cat,
	  installcheck/catalogs/longstrange.cat,
	  installcheck/catalogs/resultsmissing.cat,
	  installcheck/catalogs/retried-nofinish.cat,
	  installcheck/catalogs/retried.cat,
	  installcheck/catalogs/shortstrange.cat,
	  installcheck/catalogs/skipped.cat: Add 'STATS driver' and many
	  'INFO pid-done' lines

2016-08-24  Jean-Louis Martineau <JMartineau@carbonite.com>
	* perl/Amanda/Extract.pm: Use 'eq' to compare string

2016-08-23  Jean-Louis Martineau <JMartineau@carbonite.com>
	* perl/Amanda/Restore.pm: Do not chdir if not an absolute path

2016-08-19  Jean-Louis Martineau <JMartineau@carbonite.com>
	* perl/Amanda/Changer.pm (make_new_tape_label): use the child slot
	* perl/Amanda/Changer/aggregate.pm: Add allow-missing-changer property

2016-08-18  Jean-Louis Martineau <JMartineau@carbonite.com>
	* installcheck/Makefile.am: Move some test to full_tests or
	  restore_tests
	* installcheck/failure-client-custom-compress-end.pl: Remove 1 test

2016-08-18  Jean-Louis Martineau <JMartineau@carbonite.com>
	* installcheck/Amanda_Device.pl: Fix test

2016-08-18  Jean-Louis Martineau <JMartineau@carbonite.com>
	* installcheck/failure-client-custom-compress-end.pl: Remove 5 tests

2016-08-17  Jean-Louis Martineau <JMartineau@carbonite.com>
	* server-src/dumper.c:Fix compiler warning