@@ -1,3 +1,10 @@
+2016-09-01  Jean-Louis Martineau <JMartineau@carbonite.com>
+	* device-src/device.c (default_device_property_set_ex): Return the
+	  device error if it is set
+	* device-src/s3-device.c (s3_device_set_use_subdomain_fn):
+	  Improve error message
+	* installcheck/Amanda_Device.pl: Test non DNS bucket name
+
 2016-08-25  Jean-Louis Martineau <JMartineau@carbonite.com>
 	* perl/Amanda/Process.pm: Typo
 
